# evolution

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  requirements.txt
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml  tests.yml
crates/evolution-builder/: Cargo.toml
crates/evolution-builder/src/: builder.rs  csv.rs  datatype.rs  fixed_width.rs  lib.rs  parquet.rs
crates/evolution-common/: Cargo.toml
crates/evolution-common/src/: datatype.rs  error.rs  lib.rs  thread.rs
crates/evolution-converter/: Cargo.toml
crates/evolution-converter/src/: converter.rs  csv.rs  fixed_width.rs  lib.rs  parquet.rs
crates/evolution-mocker/: Cargo.toml
crates/evolution-mocker/src/: lib.rs  mocker.rs
crates/evolution-parser/: Cargo.toml
crates/evolution-parser/src/: datatype.rs  lib.rs  parser.rs  trimmer.rs
crates/evolution-schema/: Cargo.toml
crates/evolution-schema/res/: test_invalid_column.json  test_invalid_schema.json  test_valid_column.json  test_valid_schema.json
crates/evolution-schema/src/: column.rs  lib.rs  schema.rs
crates/evolution-slicer/: Cargo.toml
crates/evolution-slicer/src/: fixed_width.rs  lib.rs  slicer.rs
crates/evolution-target/: Cargo.toml
crates/evolution-target/src/: lib.rs  target.rs
crates/evolution-writer/: Cargo.toml
crates/evolution-writer/src/: csv.rs  fixed_width.rs  lib.rs  parquet.rs  writer.rs
evolution/: Cargo.toml  build.rs
evolution/res/: example_schema.json
evolution/src/: cli.rs  logger.rs  main.rs
examples/delta/: Cargo.toml
examples/delta/src/: main.rs
examples/full/: Cargo.toml
examples/full/res/: example_schema.json
examples/full/src/: cli.rs  logger.rs
examples/iceberg/: Cargo.toml  build.rs
examples/iceberg/src/: main.rs
examples/parquet/: Cargo.toml
examples/parquet/src/: cli.rs  logger.rs  main.rs
resources/: README.md  example-schema.json  example_schema.json  mock_files.flf  template-schema.json  template_schema.json
resources/mock_files/: test_mock.flf
resources/schema/: c  generate_big_testfile.sh  test_schema.json  test_schema_boolean.json  test_schema_mock.txt  test_schema_mock.txt.BIG  test_schema_trailing_commas.json  valid_schema_dtypes.json
resources/schemas/: test_invalid_schema_trailing_commas.json  test_valid_schema_all.json
resources/test-flf/: test_schema_mock.flf
resources/test-schemas/: test_invalid_schema_trailing_commas.json  test_valid_schema_all.json  test_valid_schema_booleans.json
src/: builder.rs  builder_datatypes.rs  chunked.rs  cli.rs  convert.rs  converter.rs  converters.rs  datatype.rs  defaults.rs  dump.rs  error.rs  logger.rs  logging.rs  main.rs  mock.rs  mocker.rs  mocking.rs  parser.rs  schema.rs  slicer.rs  slicers.rs  threads.rs  trimmer.rs  writer.rs
src/chunked/: arrow2_converter.rs  arrow_converter.rs  chunked_slicer.rs  mod.rs  recordbatch_output.rs  residual_slicer.rs  self_converter.rs  slicer.rs  threaded_file_output.rs  trimmer.rs
src/converters/: arrow2_builder.rs  arrow2_builder_datatypes.rs  arrow2_converter.rs  arrow_converter.rs  convert_to_arrow.rs  convert_to_self.rs  self_converter.rs
src/slicers/: new_slicer.rs  old_slicer.rs  slice_min_seek.rs
tools/: EnableEnvironment.ps1  enable-environment.sh  generate_big_testfile.sh  test-convert.sh  test-mock.sh  verify-parquet.py  verify_parquet.py
