[package]
name = "evolution"
version = "1.1.0"
edition = "2021"
description = "🦖 Evolve your fixed-length data files into Apache Parquet, fully parallelized!"
authors = [
    "Ted Hammarlund <TedHammarlund@gmail.com>",
    "Rickard Lundin <rickard@x14.se>",
    "Wilhelm Ågren <wilhelmagren98@gmail.com>",
]

readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/firelink-data/evolution"
repository = "https://github.com/firelink-data/evolution"

keywords = [
    "cli",
    "arrow",
    "data-engineering",
    "apache-parquet",
    "apache-arrow",
]
include = [ "**/*.rs", "Cargo.toml", "LICENSE", "README.md" ]
default-run = "evolution"

[dependencies]
chrono = "0.4.38"
crossbeam = "0.8.4"
colored = "2.0.4"
env_logger = "0.11.3"
half = "2.3.1"
log = "0.4.20"
num_cpus = "1.16.0"
rand = "0.8.5"
serde_json = "1.0.117"
threadpool = "1.8.1"
clap = { version = "4.5.4", features = ["default", "derive"] }
serde = { version = "1.0.202", features = ["derive"] }
rayon = { version = "1.10.0", optional = true }
atoi_simd = { version = "0.16.0", optional = true }
arrow2 = "0.18.0"
libc = "0.2.154"
arrow = "51.0.0"
parquet = "51.0.0"
arrow-ipc = "52.1.0"
deltalake =  { version="0.17.3", features = ["datafusion"]}
datafusion = "38.0.0"

deltalake-core = "0.17.3"

padder = { version = "1.2.0", features = ["serde"] }
ordered-channel="1.1.0"
atomic-counter = "1.0.1"
crossbeam-channel = "0.5.13"
tracing = "0.1.40"
tokio = "1.37.0"
futures = "0.3.30"
[dev-dependencies]
glob = "0.3.1"

[features]
default = [ "rayon" ]
rayon = [ "dep:rayon", "dep:atoi_simd" ]
nightly = []
