[workspace]
members = [
    "examples/*",
    "crates/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/firelink-data/evolution"
repository = "https://github.com/firelink-data/evolution"
authors = [
    "Ted Hammarlund <TedHammarlund@gmail.com>",
    "Rickard Lundin <rickard@x14.se>",
    "Wilhelm Ågren <wilhelmagren98@gmail.com>",
]
license = "MIT"
version = "1.2.0"
readme = "README.md"
