[package]
name = "evolution-builder"
version = "1.0.0"
description = "Builder implementations for evolution."
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
evolution-common = { path = "../evolution-common", version = "1.0.0" }
evolution-parser = { path = "../evolution-parser", version = "1.0.0" }
arrow = { version = "51.0.0", default-features = false }
log = "0.4.21"
half = "2.4.1"
