[package]
name = "evolution-builder"
description = "Builder implementations for evolution."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[lib]
name = "evolution_builder"
path = "src/lib.rs"
bench = false

[dependencies]
evolution-common = { workspace = true }
evolution-parser = { workspace = true }
arrow = { version = "53.1.0", default-features = false }
log = "0.4.21"
half = "2.4.1"
