[package]
name = "evolution-common"
version = "1.0.0"
description = "Common util components of evolution."
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
log = "0.4.21"
num_cpus = "1.16.0"
serde = { version = "1.0.202", features = ["derive"] }
