[package]
name = "evolution-common"
description = "Common util components of evolution."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[lib]
name = "evolution_common"
path = "src/lib.rs"
bench = false

[dependencies]
log = "0.4.21"
num_cpus = "1.16.0"
serde = { version = "1.0.202", features = ["derive"] }
