[package]
name = "evolution-mocker"
version = "1.0.0"
description = "Mocking components of evolution."
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
crossbeam = "0.8.4"
evolution-common = { path = "../evolution-common" }
evolution-schema = { path = "../evolution-schema" }
evolution-writer = { path = "../evolution-writer" }
faker_rand = "0.1.1"
half = "2.4.1"
log = "0.4.21"
padder = { version = "1.2.0", features = ["serde"] }
rand = "0.8.5"
