[package]
name = "evolution-mocker"
description = "Mocking components of evolution."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
crossbeam = "0.8.4"
evolution-common = { path = "../evolution-common", version = "1.0.0"  }
evolution-schema = { path = "../evolution-schema", version = "1.0.0"  }
evolution-writer = { path = "../evolution-writer", version = "1.0.0"  }
faker_rand = "0.1.1"
half = "2.4.1"
log = "0.4.21"
padder = { version = "1.2.0", features = ["serde"] }
rand = "0.8.5"
