[package]
name = "evolution-parser"
description = "Standard implementation of a schema used with evolution."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
atoi_simd = "0.16.0"
evolution-common = { path = "../evolution-common", version = "1.0.0"  }
log = "0.4.21"
padder = "1.2.0"
