[package]
name = "evolution-parser"
description = "Data parsing functionality for evolution."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[lib]
name = "evolution_parser"
path = "src/lib.rs"
bench = false

[dependencies]
atoi_simd = "0.16.0"
evolution-common = { workspace = true }
log = "0.4.21"
padder = "1.2.0"
