[package]
name = "evolution-schema"
description = "Standard implementation of a schema used with evolution."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
evolution-builder = { path = "../evolution-builder", version = "1.2.0"  }
evolution-common = { path = "../evolution-common" , version = "1.2.0" }
evolution-parser = { path = "../evolution-parser", version = "1.2.0" }
arrow = { version = "51.0.0", default-features = false }
deltalake = "0.17.3"
padder = { version = "1.2.0", features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
log = "0.4.21"
