[package]
name = "evolution-schema"
description = "Schema implementations for evolution."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[lib]
name = "evolution_schema"
path = "src/lib.rs"
bench = false

[dependencies]
evolution-builder = { workspace = true }
evolution-common = { workspace = true }
evolution-parser = { workspace = true }
arrow = { version = "51.0.0", default-features = false }
deltalake = "0.20.1"
padder = { version = "1.2.0", features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
log = "0.4.21"
