[package]
name = "evolution-slicer"
description = "Data slicer implemented for evolution."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
evolution-common = { path = "../evolution-common", version = "1.0.0" }
log = "0.4.21"
