[package]
name = "evolution-target"
version = "1.0.0"
description = "Output targets for evolution."
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
