[package]
name = "evolution-writer"
description = "Output target writers for evolution."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
arrow = "51.0.0"
evolution-builder = { path = "../evolution-builder", version = "1.2.0" }
evolution-common = { path = "../evolution-common", version = "1.2.0" }
parquet = "51.0.0"
