[package]
name = "evolution"
description = "🦖 Evolve your fixed-length data files into Apache Parquet, fully parallelized!"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = true

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "default"] }
colored = "2.1.0"
env_logger = "0.11.3"
log = "0.4.21"
evolution-common = { path = "../../crates/evolution-common", version = "1.0.0" }
evolution-converter = { path = "../../crates/evolution-converter", version = "1.0.0" }
evolution-mocker = { path = "../../crates/evolution-mocker", version = "1.0.0", optional = true }
evolution-target = { path = "../../crates/evolution-target", version = "1.0.0" }

[features]
default = []
nightly = []
mock = [ "dep:evolution-mocker" ]
