[package]
name = "example-parquet"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "default"] }
colored = "2.1.0"
env_logger = "0.11.3"
log = "0.4.21"
evolution-common = { path = "../../crates/evolution-common" }
evolution-converter = { path = "../../crates/evolution-converter" }

[features]
default = []
nightly = []
